finished the high score feature

--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
                 </div>
             </div>
 
-            <div class="highscore-box">
-
+            <div class="highscores">
+                <h3>Highscores</h3>
             </div>
             
             <div class="final-score">
                 <h3>Your score</h3>
-                <span class="final-score-value">0</span>
+                <span id="final-score-close-button" class="final-score-value">0</span>
                 <button class="close-button">x</button>
             </div>
         </div>
