--- a/index.html
+++ b/index.html
@@ -56,12 +56,13 @@
                 <div class="text-area">
                     <h2>How to play?</h2>
                     <p>Press the "Start" button to begin the game. Upon pressing the button you will receive 5 cards on the line.</p>
-                    <p>By pressing left click on a card in line, you send the card to session. By pressing the right click, you will discard the card.</p>
-                    <p>To get points you need to make card groups. The groups consist of 3 cards that are either the consecutive or the same number. Having 3 consecutive cards of the same number will give more points than 3 cards of different colors. The amount of points you receive from a group will be displayed for a short amount of time on the left side of the group. If the group is not valid, the cards will be sent back on line.</p>
+                    <p>By pressing left click (tap) on a card in line, you send the card to session. By pressing the right click (tap and hold), you will discard the card.</p>
+                    <p>To get points you need to make card groups. The groups consist of 3 cards that are either the consecutive or the same number. Having 3 consecutive cards of the same number will give more points than 3 cards of different colors. The amount of points you receive from a group will be displayed for a short amount of time on the left side of the group. If the group is not valid, the cards will be sent back on line. You can press left or right click (tap or tap and hold) on any card from session to send it back in line.</p>
                     <p>After creating groups or discarding cards, you can use the card pack to receive more cards. It will give you enough cards to fill all the empty slots in line as long you as have cards left in pack. The amount of cards left in pack is displayed on left side of the pack.</p>
                     <p>On the bottom left side you can see the total score of the current game. The goal is to reach as many points as possible.</p>
                     <p>When there are no more possible combinations, you can "End" the game. Your top 10 scores will be saved in the highscore section.</p>
                     <p>Have Fun!</p>
+                    <p>(for touchscreen only)</p>
 
                     <h2>Combinations</h2>
                     <p>Here are listed all the combinations available and how many points each of them give. On second column in paranthesis it's the points you receive if the group has all cards of the same color.</p>
