added a loading screen for cards to be able to preload and disabled the smoothly increase for final score

--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Okey Game</title>
+    <link rel="icon" type="image/x-icon" href="./favicon.jpg">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <div class="loading-screen">
+        <h2>Loading</h2>
+        <div class="loading-dots"></div>
+        <div class="cards-preloader"></div>
+    </div>
+
     <div class="game-window">
         <div class="title-bar">
             <h1>Okey Game</h1>
